Fix animation on mobile

--- a/priv/source/stylesheets/blocks/_canvas.sass
+++ b/priv/source/stylesheets/blocks/_canvas.sass
@@ -1,6 +1,7 @@
 .canvas
   position: relative
   min-height: 100vh
+  overflow-x: hidden
 
 .canvas__header__top
   +position(fixed, 0 0 null 0)
